// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly for color amber and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-amber-100 dark:bg-amber-950 border-amber-300 dark:border-amber-700 text-amber-600 dark:text-amber-400"
/>
`;

exports[`Badge renders correctly for color amber and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-amber-100 dark:bg-amber-950 border-amber-300 dark:border-amber-700 text-amber-600 dark:text-amber-400"
/>
`;

exports[`Badge renders correctly for color blue and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-blue-100 dark:bg-blue-950 border-blue-300 dark:border-blue-700 text-blue-600 dark:text-blue-400"
/>
`;

exports[`Badge renders correctly for color blue and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-blue-100 dark:bg-blue-950 border-blue-300 dark:border-blue-700 text-blue-600 dark:text-blue-400"
/>
`;

exports[`Badge renders correctly for color cyan and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-cyan-100 dark:bg-cyan-950 border-cyan-300 dark:border-cyan-700 text-cyan-600 dark:text-cyan-400"
/>
`;

exports[`Badge renders correctly for color cyan and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-cyan-100 dark:bg-cyan-950 border-cyan-300 dark:border-cyan-700 text-cyan-600 dark:text-cyan-400"
/>
`;

exports[`Badge renders correctly for color emerald and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-emerald-100 dark:bg-emerald-950 border-emerald-300 dark:border-emerald-700 text-emerald-600 dark:text-emerald-400"
/>
`;

exports[`Badge renders correctly for color emerald and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-emerald-100 dark:bg-emerald-950 border-emerald-300 dark:border-emerald-700 text-emerald-600 dark:text-emerald-400"
/>
`;

exports[`Badge renders correctly for color fuchsia and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-fuchsia-100 dark:bg-fuchsia-950 border-fuchsia-300 dark:border-fuchsia-700 text-fuchsia-600 dark:text-fuchsia-400"
/>
`;

exports[`Badge renders correctly for color fuchsia and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-fuchsia-100 dark:bg-fuchsia-950 border-fuchsia-300 dark:border-fuchsia-700 text-fuchsia-600 dark:text-fuchsia-400"
/>
`;

exports[`Badge renders correctly for color green and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-green-100 dark:bg-green-950 border-green-300 dark:border-green-700 text-green-600 dark:text-green-400"
/>
`;

exports[`Badge renders correctly for color green and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-green-100 dark:bg-green-950 border-green-300 dark:border-green-700 text-green-600 dark:text-green-400"
/>
`;

exports[`Badge renders correctly for color indigo and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-indigo-100 dark:bg-indigo-950 border-indigo-300 dark:border-indigo-700 text-indigo-600 dark:text-indigo-400"
/>
`;

exports[`Badge renders correctly for color indigo and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-indigo-100 dark:bg-indigo-950 border-indigo-300 dark:border-indigo-700 text-indigo-600 dark:text-indigo-400"
/>
`;

exports[`Badge renders correctly for color lime and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-lime-100 dark:bg-lime-950 border-lime-300 dark:border-lime-700 text-lime-600 dark:text-lime-400"
/>
`;

exports[`Badge renders correctly for color lime and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-lime-100 dark:bg-lime-950 border-lime-300 dark:border-lime-700 text-lime-600 dark:text-lime-400"
/>
`;

exports[`Badge renders correctly for color neutral and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-neutral-100 dark:bg-neutral-950 border-neutral-300 dark:border-neutral-700 text-neutral-600 dark:text-neutral-400"
/>
`;

exports[`Badge renders correctly for color neutral and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-neutral-100 dark:bg-neutral-950 border-neutral-300 dark:border-neutral-700 text-neutral-600 dark:text-neutral-400"
/>
`;

exports[`Badge renders correctly for color orange and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-orange-100 dark:bg-orange-950 border-orange-300 dark:border-orange-700 text-orange-600 dark:text-orange-400"
/>
`;

exports[`Badge renders correctly for color orange and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-orange-100 dark:bg-orange-950 border-orange-300 dark:border-orange-700 text-orange-600 dark:text-orange-400"
/>
`;

exports[`Badge renders correctly for color pink and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-pink-100 dark:bg-pink-950 border-pink-300 dark:border-pink-700 text-pink-600 dark:text-pink-400"
/>
`;

exports[`Badge renders correctly for color pink and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-pink-100 dark:bg-pink-950 border-pink-300 dark:border-pink-700 text-pink-600 dark:text-pink-400"
/>
`;

exports[`Badge renders correctly for color purple and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-purple-100 dark:bg-purple-950 border-purple-300 dark:border-purple-700 text-purple-600 dark:text-purple-400"
/>
`;

exports[`Badge renders correctly for color purple and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-purple-100 dark:bg-purple-950 border-purple-300 dark:border-purple-700 text-purple-600 dark:text-purple-400"
/>
`;

exports[`Badge renders correctly for color red and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-red-100 dark:bg-red-950 border-red-300 dark:border-red-700 text-red-600 dark:text-red-400"
/>
`;

exports[`Badge renders correctly for color red and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-red-100 dark:bg-red-950 border-red-300 dark:border-red-700 text-red-600 dark:text-red-400"
/>
`;

exports[`Badge renders correctly for color rose and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-rose-100 dark:bg-rose-950 border-rose-300 dark:border-rose-700 text-rose-600 dark:text-rose-400"
/>
`;

exports[`Badge renders correctly for color rose and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-rose-100 dark:bg-rose-950 border-rose-300 dark:border-rose-700 text-rose-600 dark:text-rose-400"
/>
`;

exports[`Badge renders correctly for color slate and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-slate-100 dark:bg-slate-950 border-slate-300 dark:border-slate-700 text-slate-600 dark:text-slate-400"
/>
`;

exports[`Badge renders correctly for color slate and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-slate-100 dark:bg-slate-950 border-slate-300 dark:border-slate-700 text-slate-600 dark:text-slate-400"
/>
`;

exports[`Badge renders correctly for color stone and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-stone-100 dark:bg-stone-950 border-stone-300 dark:border-stone-700 text-stone-600 dark:text-stone-400"
/>
`;

exports[`Badge renders correctly for color stone and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-stone-100 dark:bg-stone-950 border-stone-300 dark:border-stone-700 text-stone-600 dark:text-stone-400"
/>
`;

exports[`Badge renders correctly for color teal and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-teal-100 dark:bg-teal-950 border-teal-300 dark:border-teal-700 text-teal-600 dark:text-teal-400"
/>
`;

exports[`Badge renders correctly for color teal and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-teal-100 dark:bg-teal-950 border-teal-300 dark:border-teal-700 text-teal-600 dark:text-teal-400"
/>
`;

exports[`Badge renders correctly for color violet and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-violet-100 dark:bg-violet-950 border-violet-300 dark:border-violet-700 text-violet-600 dark:text-violet-400"
/>
`;

exports[`Badge renders correctly for color violet and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-violet-100 dark:bg-violet-950 border-violet-300 dark:border-violet-700 text-violet-600 dark:text-violet-400"
/>
`;

exports[`Badge renders correctly for color yellow and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-yellow-100 dark:bg-yellow-950 border-yellow-300 dark:border-yellow-700 text-yellow-600 dark:text-yellow-400"
/>
`;

exports[`Badge renders correctly for color yellow and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-yellow-100 dark:bg-yellow-950 border-yellow-300 dark:border-yellow-700 text-yellow-600 dark:text-yellow-400"
/>
`;

exports[`Badge renders correctly for color zinc and rounded default 1`] = `
<span
  className="px-3 py-2 text-sm rounded-md bg-zinc-100 dark:bg-zinc-900 border-zinc-300 dark:border-zinc-700 text-zinc-600 dark:text-zinc-400"
/>
`;

exports[`Badge renders correctly for color zinc and rounded full 1`] = `
<span
  className="px-3 py-2 text-sm rounded-full bg-zinc-100 dark:bg-zinc-900 border-zinc-300 dark:border-zinc-700 text-zinc-600 dark:text-zinc-400"
/>
`;
